src/test/ui/rfc-2397-do-not-recommend/unstable-feature.rs
#[do_not_recommend]
//~^ ERROR the `#[do_not_recommend]` attribute is an experimental feature
trait Foo {
}

fn main() {
}
